added handdrawn doodles pages

--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -23,6 +23,8 @@
             #i a{color: #080808}
             #i a:hover{color: #fafbff}
 
+            #first_couple_tries img{max-width: 100%}
+
             details > details{--color: #47a0ff}
             details > details > details{--color: #ff0000}
 
@@ -64,6 +66,47 @@
         <details id="pages">
             <summary>page archive</summary>
             <p>pages that mostly didnt see the light of day, some i just used to practice layout and css.</p>
+
+            <details id="handdrawn_or_doodles"><summary>handdrawn/doodles</summary>
+                <p>When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
+                once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.</p>
+                <details id="first_couple_tries"><summary>first couple tries</summary>
+                    <img src="pages/doodles/original1.jpg" alt="try #1">
+                    <img src="pages/doodles/original2.jpg" alt="try #2">
+                    <a role="navigation" href="#first_couple_tries" class="top">↑ top of folder</a>
+                </details>
+                <ul>
+                    <li>original <a href="pages/doodles/handdrawn">{handdrawn}</a> page (Might take a while to load because of the large images)</li>
+                </ul>
+                <p>since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly.</p>
+                <ul>
+                    <img src="pages/doodles/people_button.jpg" alt="original people button">
+                    <img src="pages/doodles/ruler_and_compass_button.jpg" alt="original ruler and compass button">
+                    <img src="pages/doodles/etc_button.jpg" alt="original etc button (the culprit)">
+                </ul>
+                <p>What i ended up using was these:</p>
+                <ul>
+                    <img src="pages/doodles/people.gif" alt="people button" style="border: solid #05a1fc min(4px, 0.75vw)">
+                    <img src="pages/doodles/peopleheader.gif" alt="people header">
+                </ul>
+                <ul>
+                    <img src="pages/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c min(4px, 0.75vw)">
+                    <img src="pages/doodles/racheader.gif" alt="ruler and compass header">
+                </ul>
+                <ul>
+                    <img src="pages/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 min(4px, 0.75vw)">
+                    <img src="pages/doodles/etcheader.gif" alt="etc header">
+                </ul>
+                <p>Also, during the 5th redesign, i tried to remake the buttons to be much smaller and easier to see, but i couldn't make it work right so i kept the big buttons.</p>
+                <ul>
+                    <img src="pages/doodles/peoplesmall.gif" alt="small people button">
+                    <img src="pages/doodles/racsmall.gif" alt="small ruler and compass button (recreation, i can't recover the original)">
+                    <img src="pages/doodles/etcsmall.gif" alt="small etc button">
+                </ul>
+                <p>But, now that i separate doodles based on the notebooks, these buttons are, sadly, obsolete now.</p>
+                <a role="navigation" href="#handdrawn_or_doodles" class="top">↑ top of folder</a>
+            </details>
+
             <details id="toki pona v1">
                 <summary>toki pona v1</summary>
                 <p>an attempt at making a toki pona course, using colors to help learning!
