--- a/basement/misc/cabinet/indexes/index3.html
+++ b/basement/misc/cabinet/indexes/index3.html
@@ -31,13 +31,13 @@
     <details><summary style="font-weight: bold">current status</summary>
         <div id="entry" style="margin-left: 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
     <p style="font-size:xx-large">
-        <a href="/website/about" title="me and what i like to do">about</a> . 
-        <a href="/website/musicians" title="good music people">musicians</a> . 
-        <a href="/website/websites" title="cool websites" class="websites">websites</a><br>
-        <a href="/website/words" title="poems and texts and things" class="words">words</a> . 
-        <a href="/website/doodles" title="stuff i drew" class="i">doodles</a> . 
-        <a href="/website/blender" title="3d renders in blender">blender</a> . 
-        <a href="/website/basement/misc" title="general miscellanea" class="misc">misc</a><br>
-        <a href="/website/buttons" title="other folks' sites" class="buttons">buttons</a> . 
-        <a href="/website/sitelog" title="what's changed" class="log">sitelog</a>
+        <a href="/about" title="me and what i like to do">about</a> . 
+        <a href="/musicians" title="good music people">musicians</a> . 
+        <a href="/websites" title="cool websites" class="websites">websites</a><br>
+        <a href="/words" title="poems and texts and things" class="words">words</a> . 
+        <a href="/doodles" title="stuff i drew" class="i">doodles</a> . 
+        <a href="/blender" title="3d renders in blender">blender</a> . 
+        <a href="/basement/misc" title="general miscellanea" class="misc">misc</a><br>
+        <a href="/buttons" title="other folks' sites" class="buttons">buttons</a> . 
+        <a href="/sitelog" title="what's changed" class="log">sitelog</a>
     </p></body>
