--- a/basement/misc/cabinet/indexes/index4.html
+++ b/basement/misc/cabinet/indexes/index4.html
@@ -47,15 +47,15 @@
     <details><summary style="font-weight: bold">current status</summary>
         <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
     <div class="summary">
-        <div><a href="/website/about"         title="me and what i like to do"                   >about</a></div>
-        <div><a href="/website/musicians"     title="good music people"                          >musicians</a></div>
-        <div><a href="/website/websites"      title="cool websites"              class="websites">websites</a></div></div>
+        <div><a href="/about"         title="me and what i like to do"                   >about</a></div>
+        <div><a href="/musicians"     title="good music people"                          >musicians</a></div>
+        <div><a href="/websites"      title="cool websites"              class="websites">websites</a></div></div>
     <div class="summary">
-        <div><a href="/website/words"         title="poems and texts and things" class="words"   >words</a></div>
-        <div><a href="/website/doodles"       title="stuff i drew"               class="i"       >doodles</a></div>
-        <div><a href="/website/blender"       title="3d renders in blender"                      >blender</a></div>
-        <div><a href="/website/basement/misc" title="general miscellanea"        class="misc"    >misc</a></div></div>
+        <div><a href="/words"         title="poems and texts and things" class="words"   >words</a></div>
+        <div><a href="/doodles"       title="stuff i drew"               class="i"       >doodles</a></div>
+        <div><a href="/blender"       title="3d renders in blender"                      >blender</a></div>
+        <div><a href="/basement/misc" title="general miscellanea"        class="misc"    >misc</a></div></div>
     <div class="summary">
-        <div><a href="/website/buttons"       title="other folks' sites"         class="buttons" >buttons</a></div>
-        <div><a href="/website/sitelog"       title="what's changed"             class="log"     >sitelog</a></div>
+        <div><a href="/buttons"       title="other folks' sites"         class="buttons" >buttons</a></div>
+        <div><a href="/sitelog"       title="what's changed"             class="log"     >sitelog</a></div>
     </div></div></div></body>
