--- a/basement/misc/cabinet/indexes/index7.html
+++ b/basement/misc/cabinet/indexes/index7.html
@@ -83,12 +83,12 @@
         
     </div>
     <ul class="summary">
-        <li><a href="/website/about"     class="about"    >about</a></li>
-        <li><a href="/website/bookmarks" class="bookmarks">bookmarks</a></li>
-        <li><a href="/website/blender"   class="blender"  >blender</a></li>
-        <li><a href="/website/words"     class="words"    >words</a></li>
-        <li><a href="/website/buttons"   class="buttons"  >buttons</a></li>
-        <li><a href="/website/sitelog"   class="log"      >sitelog</a></li>
+        <li><a href="/about"     class="about"    >about</a></li>
+        <li><a href="/bookmarks" class="bookmarks">bookmarks</a></li>
+        <li><a href="/blender"   class="blender"  >blender</a></li>
+        <li><a href="/words"     class="words"    >words</a></li>
+        <li><a href="/buttons"   class="buttons"  >buttons</a></li>
+        <li><a href="/sitelog"   class="log"      >sitelog</a></li>
     </ul>
 
 </body>
