--- a/basement/misc/cabinet/pages/toki-pona-1/one.html
+++ b/basement/misc/cabinet/pages/toki-pona-1/one.html
@@ -38,8 +38,8 @@
         <br><i<><u class="r">[subject]</u> li <u class="y">[verb]</u> (e <u class="b">[object]</u>)</i>
         <br>
         <br>Since we're just starting, i'll give you some words to start off with, some of them you already know (if you looked at the intro first):<br>
-        <a href="../../../cabinet">back to cabinet</a>
-        <a href="intro">introduction</a>
-        <a href="#">back to top</a>
+        <br><a href="../../../cabinet">back to cabinet</a>
+        <br><a href="intro">introduction</a>
+        <br><a href="#">back to top</a>
     </p>
     </body>
