--- a/basement/misc/cabinet/pages/toki-pona-1/intro.html
+++ b/basement/misc/cabinet/pages/toki-pona-1/intro.html
@@ -111,8 +111,8 @@
         <br>But i (hope to) show here a way that (hopefully) others will understand.
         <br>
         <br><img src="sitelen0/bye.png" alt="bye"><s>if i ever finish it</s><br><br>
-        <a href="../../../cabinet">back to cabinet</a>
-        <a href="one">#1: the basics</a>
-        <a href="#">back to top</a>
+        <br><a href="../../../cabinet">back to cabinet</a>
+        <br><a href="one">#1: the basics</a>
+        <br><a href="#">back to top</a>
     </p>
     </body>
