added cabinet to misc

--- a/basement/misc/index.html
+++ b/basement/misc/index.html
@@ -28,6 +28,7 @@
         <ul role="navigation" id="objects">
             <li><a href="journal">open the notebook</a></li>
             <li><a href="wall">look at the wall</a></li>
+            <li><a href="cabinet">open the cabinet</a></li>
         </ul>
     </main>
     </body>
