fixed back link

--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -37,7 +37,7 @@
             }
         </style></head>
     <body><header><h1>cabinet</h1>
-        <nav><a href="#">↑ top</a> <a href="../../misc">↩ back</a></nav></header>
+        <nav><a href="#">↑ top</a> <a href="../../misc">↩ misc</a></nav></header>
     <main>
         <p>You approach the cabinet, and see its drawers are unlocked, and full of folders
             containing other pages and things the webmasters made. An archive of sorts.<br>
