fixed back links in cabinet

--- a/basement/misc/cabinet/pages/blips.html
+++ b/basement/misc/cabinet/pages/blips.html
@@ -23,7 +23,7 @@
         p{font-size: xx-large; margin: 20px; position: absolute;}
         </style> 
     <body>
-        <div class="blips"><h1><a href="/website/misc/folder">b</a><a href="/website/misc/folder">l</a><a href="/website/misc/folder">i</a><a href="/website/misc/folder">p</a><a href="/website/misc/folder">s</a></h1></div>
+        <div class="blips"><h1><a href="../../cabinet/">b</a><a href="../../cabinet/">l</a><a href="../../cabinet/">i</a><a href="../../cabinet/">p</a><a href="../../cabinet/">s</a></h1></div>
         <p>short bursts of words;<br>whenever they want to appear.<br><br>
             <a href="blips/split">split</a><br>
             <a href="blips/small">small</a><br>
