--- a/basement/misc/cabinet/pages/blips/liftoff.html
+++ b/basement/misc/cabinet/pages/blips/liftoff.html
@@ -28,7 +28,7 @@
 
 
                 
-<a href="/website/misc/folder/other/blips">a conglomerate of dots</a><br>
+<a href="../blips">a conglomerate of dots</a><br>
 in a myriad of blank<br>
 as far below they sank<br>
 into the dark it clots
@@ -39,7 +39,7 @@ into the dark it clots
 just as they disappear<br>
 mirror opposite the water<br>
 within the empty clutter<br>
-<a href="/website/misc/folder/other/blips">a conglomerate of dots</a>
+<a href="../blips">a conglomerate of dots</a>
         
 
 
