--- a/basement/misc/cabinet/pages/difference.html
+++ b/basement/misc/cabinet/pages/difference.html
@@ -20,7 +20,7 @@
         </style></head>
     <body><header>
         <h1>about difference</h1>
-        <nav class="top"><a style="text-decoration: solid 1px var(--text)" href="../index">back to cabinet</a></nav></header>
+        <nav class="top"><a style="text-decoration: solid 1px var(--text)" href="../../cabinet/">back to cabinet</a></nav></header>
     <main>
         <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
