--- a/basement/misc/cabinet/pages/fuleponhinep.html
+++ b/basement/misc/cabinet/pages/fuleponhinep.html
@@ -29,7 +29,7 @@
     <body>
         <div class="main">
             <h1 style="margin: 0">fulepõhiné /fu.leˌpõ.hiˈnɛ/</h1>
-        <p>a crappy first attempt at conlanging ..... <a href="../index">back to folder</a></p>
+        <p>a crappy first attempt at conlanging ..... <a href="../../cabinet/">back to folder</a></p>
         <h2>sounds</h2>
         </div><div class="wide">
         <table>
