--- a/basement/misc/cabinet/pages/hi.html
+++ b/basement/misc/cabinet/pages/hi.html
@@ -14,6 +14,6 @@
     <body>
         <p style="font-size: 70px; text-shadow: #080808 7px 7px;">_(:3」∠)_<br>hi</p>
 
-        <br><br><br><br><br><br><a href="/website/misc/folder">go back</a>
+        <br><br><br><br><br><br><a href="../../cabinet/">go back</a>
 
 </body>
