--- a/basement/misc/cabinet/pages/nothing.html
+++ b/basement/misc/cabinet/pages/nothing.html
@@ -15,7 +15,7 @@
     <body>
     <h1>nothing in particular.</h1>
     <p style="margin: 0; margin-top: 5px">a probable blog</p><br>
-    ← <a href="/website/misc/folder" style="margin-top: 5px">folder</a>
+    ← <a href="../../cabinet/" style="margin-top: 5px">folder</a>
 
     <ul>
         <li><h2><a href="nothing/starting">starting ramblings</a></h2>   <p>24/2/2023</p></span></li>
