--- a/basement/misc/cabinet/pages/zine/1.html
+++ b/basement/misc/cabinet/pages/zine/1.html
@@ -26,6 +26,6 @@
             <p>
             2  <a href="2">intro</a><br>
             4  <a href="4">jan</a><br><br>
-            <a href="/website/misc/folder">go back to folder</a>
+            <a href="../../cabinet/">go back to folder</a>
         </div>
     </body>
