--- a/basement/misc/cabinet/pages/blips/small.html
+++ b/basement/misc/cabinet/pages/blips/small.html
@@ -26,6 +26,6 @@
             because they end.</p>
         </div>
         <div style="width: 50vw; display: flex">
-            <a href="/website/misc/folder/other/blips" style="align-self: center; margin: auto"><div class="dot"></div></a>
+            <a href="../blips" style="align-self: center; margin: auto"><div class="dot"></div></a>
         </div>
     </body>
