--- a/buttons/index.html
+++ b/buttons/index.html
@@ -46,13 +46,7 @@
 
 
             @media (max-width: 600px) {
-                body{display: block}
-                header{height:auto; border-left: none; border-bottom: solid 1px var(--color);
-                    background-color: var(--back); text-align: right;
-                    max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px}
-                main{max-width: 40rem; padding-left: 24px}
-                nav{display:block;}
-                nav a{display: inline}}
+                header{text-align: right;}}
         </style></head>
     <body><header><h1>but&shy;tons</h1>
         <nav><a href="../corridor">← back</a></nav></header>
