--- a/buttons/index.html
+++ b/buttons/index.html
@@ -46,7 +46,7 @@
 
 
             @media (max-width: 600px) {
-                header{text-align: right;}}
+                header{text-align: right; border-left: none}}
         </style></head>
     <body><header><h1>but&shy;tons</h1>
         <nav><a href="../corridor">← back</a></nav></header>
