added effect to icossymmetry (?)

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -46,7 +46,8 @@
 
 
             @media (max-width: 600px) {
-                header{text-align: right; border-left: none}}
+                header{background-color: color-mix(in srgb, var(--back) 80%, transparent);
+                    text-align: right; border-left: none}}
         </style></head>
     <body><header><h1>but&shy;tons</h1>
         <nav><a href="../corridor">← back</a></nav></header>
