--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -12,8 +12,8 @@
         @media (max-width: 650px) {
             body{display: block}
             header{height:auto; border-right: none; border-bottom: solid 1px var(--color);
-                background-color: var(--back); text-align: left;
-                max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px}
+                background-color: color-mix(in srgb, var(--back) 60%, transparent); text-align: left;
+                max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px; backdrop-filter: blur(4px);}
             main{max-width: 40rem}
             nav{display:block;}
             nav a{display: inline}}</style>
