made the images fit the old layout

--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -3,12 +3,8 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../../style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>blender/icossymetry</title><style>
-        body{--back: black;
-            --text: ghostwhite;
-            --color: royalblue;
-            font-family: 'Uncut Sans', sans-serif}
-        
         @media (max-width: 650px) {
             body{display: block}
             header{height:auto; border-right: none; border-bottom: solid 1px var(--color);
