--- a/blender/index.html
+++ b/blender/index.html
@@ -3,11 +3,8 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>blender</title><style>
-            body{--back: black;
-                --text: ghostwhite;
-                --color: royalblue;
-                font-family: 'Uncut Sans', sans-serif}
 
             details:hover, details[open]{--back: var(--text)}
 
