--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -11,7 +11,7 @@
                 background-color: color-mix(in srgb, var(--back) 60%, transparent); text-align: left;
                 max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px; backdrop-filter: blur(4px);}
             main{max-width: 40rem}
-            nav{display:block;}
+            nav{display:block; margin: 16px 0}
             nav a{display: inline}}</style>
 
         </head>
