--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -19,7 +19,7 @@
             <h1>icos&shy;symmet&shy;ry</h1>
             <nav><a href="#">↑ top</a></div><a href="../../blender/">↩ blender</a></nav>
         </header><main>
-        <p>This whole thing started when i wanted to recreat1e the floor pattern in this iconic maths video, 
+        <p>This whole thing started when i wanted to recreate the floor pattern in this iconic maths video, 
         <a href="https://www.youtube.com/watch?v=4aN6vX7qXPQ">Not Knot</a> by the Geometry Center.
         I knew i couldn't really recreate it bc it was a hyperbolic tiling, but i still tried to do
         something similar.<br><br>
