--- a/blender/index.html
+++ b/blender/index.html
@@ -19,7 +19,7 @@
             #expos{display:block}
         </style></head>
     <body><header><h1>blender</h1>
-        <nav><a href="corridor">↩ back</a></nav></header>
+        <nav><a href="../corridor">↩ back</a></nav></header>
     <main>
         <p>You enter the room and see many 3d rendered images framed on walls,
             lit up by lights like a museum exposition. Each is marked by the expo name with
