--- a/sitelog.html
+++ b/sitelog.html
@@ -20,6 +20,9 @@
                 padding-left: 12px;}
 
             a:hover{background-color: orange; text-decoration-color: orange}
+
+            @media (max-width: 600px) {
+            header{background-color: color-mix(in srgb, var(--back) 50%, transparent)}}
         </style></head>
     <body><header><h1>site&shy;log</h1>
         <nav><a href="#">↑ top</a> <a href="corridor">↩ back</a></nav></header>
