--- a/blender/index.html
+++ b/blender/index.html
@@ -6,6 +6,8 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>blender</title><style>
 
+            body{--backtrans: 60%}
+
             details:hover, details[open]{--back: var(--text)}
 
             #expos a{width: fit-content; margin: 0;
