--- a/sitelog.html
+++ b/sitelog.html
@@ -7,7 +7,7 @@
             body{--back: black;
                 --text: orange;
                 --color: sienna;
-                --max: 600px;
+                --backtrans: 50%;
                 font-family: 'Inconsolata', monospace}
             
             h1, h3, b{font-weight: 900}
@@ -20,9 +20,6 @@
                 padding-left: 12px;}
 
             a:hover{background-color: orange; text-decoration-color: orange}
-
-            @media (max-width: 600px) {
-            header{background-color: color-mix(in srgb, var(--back) 50%, transparent)}}
         </style></head>
     <body><header><h1>site&shy;log</h1>
         <nav><a href="#">↑ top</a> <a href="corridor">↩ back</a></nav></header>
