--- a/bookmarks.html
+++ b/bookmarks.html
@@ -23,6 +23,9 @@
             main{padding-left: max(min(48px, calc((100vw - 30rem) / 2)), 24px);}
 
             ::selection{background-color: var(--color)}
+
+            @media (max-width: 600px) {
+                header{border-left: none; text-align: right;}}
         </style></head>
     <body><header><h1>&nbsp;book&shy;marks</h1>
         <nav><a href="#">↑ top</a> <a href="corridor">← back</a></nav></header>
