--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
             body{--back: ghostwhite;
                 --text: black;
                 --color: royalblue;
-                --max: 600px;
+                --backtrans: 50%;
                 font-family: 'Uncut Sans', sans-serif}
             
             ::selection{background-color: var(--color)}
@@ -28,15 +28,6 @@
             @media only screen and (min-width: 700px) {
                 .about{display: grid; grid-template-columns: 1fr 3fr;}
                 img{margin: 0 20px 20px 0; align-self: center}}
-
-            @media (max-width: 600px) {
-                body{display: block}
-                header{height:auto; border-right: none; border-bottom: solid 1px var(--color);
-                    background-color: var(--back); text-align: left;
-                    max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px}
-                main{max-width: 40rem}
-                nav{display:block;}
-                nav a{display: inline}}
         </style></head>
     <body><header><h1><span style="color: #05a1fc">.</span><span style="color: #ff0060">.</span><span style="color: #ffb400">.</span>about</h1>
         <nav><a href="#">↑ top</a> <a href="corridor">↩ back</a></nav></header>
