made it compatible with safari

--- a/basement/misc/journal.html
+++ b/basement/misc/journal.html
@@ -86,7 +86,8 @@
             Hi again, i'm doing another redesign yeah...<br>
             I need to start trying to make just something that i like how it looks and not overthink too much...<br>
             Go light on myself yk? Everyone needs a bit of that.<br>
-            I'm using the glorious google material design builder (add link here!) that lets me add a color and get all the lightness values i need!<br>
+            I'm using the glorious google <a href="https://material-foundation.github.io/material-theme-builder/">material design builder</a> 
+            that lets me add a color and get all the lightness values i need!<br>
             ...and use the colors completely incorrectly to the actual design guidelines-<br>
             <br>
             Also i'm not gonna add a musicians page bc i'd rather you just see what music i like instead of me ranking and describing them in a (probably definitely) biased way; or a websites page bc they were all basically stolen from vsauce's dong so... yeah<br>
