made details round

--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -25,6 +25,7 @@
 
             #first_couple_tries img{max-width: 100%}
 
+            details{border-radius: 10px}
             details > details{--color: #47a0ff}
             details > details > details{--color: #ff0000}
 
