--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="assets/enter.png">
         <title>nowhere in particular</title><style>
             @font-face {
                 font-family: 'Inconsolata';
