--- a/corridor.html
+++ b/corridor.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="assets/corridor.png">
         <title>corridor</title><style>
             @font-face {
                 font-family: 'Inconsolata';
