added favicons on all the other places

--- a/basement/misc/index.html
+++ b/basement/misc/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="../../assets/misc.png">
         <title>> misc</title><style>
             h1::before{content: ">"} 
 
