--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="../../../assets/misc.png">
         <title>/ cabinet</title><style>
             details{border-color: var(--back); margin: 8px 0}
             details:hover, details[open]{border-color: var(--color); background-color: var(--back);
