--- a/basement/misc/journal.html
+++ b/basement/misc/journal.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="../../assets/misc.png">
         <title>/ journal</title><style>
             h2{margin-bottom: 8px}
             h2::before{content: "> "; color: var(--color)} 
