--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="../../assets/blender.gif">
         <title>blender/icossymetry</title><style>
         @media (max-width: 800px) {
             body{display: block}
