--- a/bookmarks.html
+++ b/bookmarks.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="assets/bookmarks.png">
         <title>bookmarks</title><style>
             body{--back: #0d0542;
                 --text: #ffb135;
