--- a/corridor.html
+++ b/corridor.html
@@ -40,10 +40,10 @@
                 from {transform: translateX(30rem)}
                 to   {transform: translateX(-100%)}}
             .marquee {overflow: hidden; max-width: 30rem; display: flex; justify-content: flex-end;
-            margin: 16px 0; border: dotted 1px grey; padding: 8px 0; flex-direction: row-reverse;}
+            margin: 16px 0; border: dotted 1px grey; padding: 0; flex-direction: row-reverse;}
             .marquee > #moving {animation: linear 16s marquee infinite;
                 white-space: nowrap; display: flex; gap: 8px;
-                width: fit-content}
+                width: fit-content; margin: 8px 0}
             .marquee:hover > div{animation-play-state: paused;}
             #statuscafe{display: flex; gap: 8px}
             #statuscafe-username{display: none}
@@ -72,7 +72,8 @@
                 <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         </div>
         <div style=" flex-shrink: 0; z-index: 1">
-            <p style="padding-left: 8px; box-shadow: black 4px 0 4px; background-color: black;">
+            <p style="padding: 8px; box-shadow: #0005 4px 0 4px; background-color: #0005;
+             backdrop-filter: blur(6px); -webkit-backdrop-filter: blur(6px);">
                 <a href="https://status.cafe/users/cvni81" id="statuscafe_link">latest status</a><b>:</b> </p></div></div>
         <nav>
             <h2 style="text-align: right;"><a id='about' href="about">about →</a></h2>
