--- a/corridor.html
+++ b/corridor.html
@@ -72,7 +72,7 @@
                 <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         </div>
         <div style=" flex-shrink: 0; z-index: 1">
-            <p style="padding: 8px; box-shadow: #0005 4px 0 4px; background-color: #0005;
+            <p style="padding: 8px; box-shadow: #000a 4px 0 4px; background-color: #0005;
              backdrop-filter: blur(6px); -webkit-backdrop-filter: blur(6px);">
                 <a href="https://status.cafe/users/cvni81" id="statuscafe_link">latest status</a><b>:</b> </p></div></div>
         <nav>
