--- a/basement/misc/cabinet/indexes/index.html
+++ b/basement/misc/cabinet/indexes/index.html
@@ -43,6 +43,6 @@
             <li><a href="/blender"><b>blender</b></a> things i've made in blender<br></li>
             <li><a href="/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
             <li><a href="/playlists"><b>playlists</b></a> playlists i've made<br></li>
-            <li><a href="difference"><b>difference</b></a> why it matters<br></li>
+            <li><a href="../pages/difference"><b>difference</b></a> why it matters<br></li>
             <li><a href="/sitelog"><b>sitelog</b></a><br></li></ul></div>
     </div></body>
