added blender to corridor and moved note to archive

--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -19,10 +19,12 @@
             ul{list-style-type: "- ";}
 
             #i:hover, #i[open]{background-color: #fafbff;
-                color: #080808;
-                --color: #080808}
+                color: #080808; --color: #080808}
             #i a{color: #080808}
             #i a:hover{color: #fafbff}
+
+            #corridor_note:hover, #corridor_note[open]{background-color: yellowgreen;
+                color: black; --color: black}
 
             #first_couple_tries img{max-width: 100%}
 
@@ -385,6 +387,17 @@
         <details id="text">
             <summary>text archive</summary>
             <p>.txt files i found worth putting here. mostly anxiety.</p>
+            <details id="corridor_note"><summary>corridor note</summary>
+                <p>oh hey! welcome back to my website. it's going through some changes. 
+                    again. for the 8th time, by my counts.<br>it's just that i keep coming across
+                    new things and my feelings change. as does everything tbh<br>so. i'm redoing and
+                    reorganizing things around here. like adding this corridor. makes it more obvious
+                    that this is a real place yk<br>
+                    and with all the doors you see i plan to add a bunch of stuff, <s>including my stash
+                    of OFL fonts!</s><br>ig its a party trick of mine. or a sign of adhd.<br>so yeah. 
+                    expect more stuff here in the future!<br><br>-- cvni81
+                </p>
+                </details>
             <details id="fonts"><summary>fonts to add eventually to the site eventually</summary>
                 <p>gloock
                 <br>tilt warp
