--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -13,7 +13,8 @@
         .name::selection{background-color: #5dcbfc}
         .tab:hover{background-color: #14052b; color: #23f3ad}
         details{margin-top:0; border-color: #f6abb6}
-        details[open]{background: linear-gradient(342deg, #5dcbfc 0%, #f6abb6 100%)}
+        details[open]{background: linear-gradient(342deg, #5dcbfc 0%, #f6abb6 100%); 
+            border-color: var(--back)}
         details:hover{background-color: #f6abb6;}
         nav a{text-decoration-color: #f6abb6;}
         nav a:hover{background-color: #f6abb6}
