--- a/buttons/index.html
+++ b/buttons/index.html
@@ -58,14 +58,14 @@
         <details><summary>our buttons</summary>
             <p style="margin-bottom: 16px">These are from the previous redesign, but they look good still so i'll keep them here. More buttons
                 (hopefully) in the works.
-                Also, best practice is to download the images to your site directory, so it doesn't disappear when i make
+                If youwant to, download the images to your site directory, so it doesn't disappear when i make
                 another redesign!
             </p>
             <div id="our_buttons">
                 <div><img src="88x31.gif"><br>
-                <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+                <textarea>&lt;a href="https://cvni1981.github.io"&gt;&lt;img src="https://cvni1981.github.io/buttons/88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
                 <div><img src="static.gif"><br>
-                <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="static.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+                <textarea>&lt;a href="https://cvni1981.github.io"&gt;&lt;img src="https://cvni1981.github.io/buttons/static.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
             </div>
         </details>
         <h2>acquaintances</h2>
