--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -31,9 +31,9 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 73 changes</li>
+                    <li><b>the motan:</b> 78 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 39 changes</li>
+                    <li><b>tabby:</b> 40 changes</li>
                     <li><b>jan Seli:</b> 23 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
@@ -42,6 +42,12 @@
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>25/6:<b> ma ante pi two days old </b><span class="name">the motan</span></li><br>
+            <li>25/6:<b> ma ante pi two years old </b><span class="name">tabby</span></li><br>
+            <li>24/6:<b> phlegm </b><span class="name">the motan</span></li><br>
+            <li>24/6:<b> phligm </b><span class="name">the motan</span></li><br>
+            <li>24/6:<b> phlim </b><span class="name">the motan</span></li><br>
+            <li>24/6:<b> flim </b><span class="name">the motan</span></li><br>
             <li>23/6:<b> film </b><span class="name">tabby</span></li><br>
             <li>22/6:<b> jijo jantje pji mja jantje </b><span class="name">the motan</span></li><br>
             <li>22/6:<b> jijo jantje </b><span class="name">the motan</span></li><br>
