--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -31,10 +31,10 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 78 changes</li>
+                    <li><b>the motan:</b> 80 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 40 changes</li>
-                    <li><b>jan Seli:</b> 23 changes</li>
+                    <li><b>jan Seli:</b> 24 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
@@ -42,6 +42,9 @@
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>26/6:<b>  ̀̀ </b><span class="name">the motan</span></li><br>
+            <li>26/6:<b> na ante pi ino ante </b><span class="name">the motan</span></li><br>
+            <li>26/5:<b> ma ante pi ino ante </b><span class="name">jan Seli</span></li><br>
             <li>25/6:<b> ma ante pi two days old </b><span class="name">the motan</span></li><br>
             <li>25/6:<b> ma ante pi two years old </b><span class="name">tabby</span></li><br>
             <li>24/6:<b> phlegm </b><span class="name">the motan</span></li><br>
